--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <![endif]-->
     </head>
     <body>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
@@ -42,5 +42,48 @@
 
             </div>
         </nav>
+
+        <div class="col-lg-6 col-lg-offset-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h1>How to ccuck foon !</h1>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <div class="well col-lg-4 col-lg-offset-4">
+                <h2>Happy memoriale day :(</h2>
+                <small> April 14, 2016</small>
+                <div>
+                    <img src="/res/warcry.jpg" style="border:2px;width:500px;">
+                </div>
+            </div>
+
+            <div class="well col-lg-4 col-lg-offset-4">
+                <h2>S H R E D D</h2>
+                <small> April 14, 2016</small>
+                <div>
+                    <img src="/res/sendoc.png" style="border:2px;width:500px;">
+                </div>
+            </div>
+
+            <div class="well col-lg-4 col-lg-offset-4">
+                <h2>Omo</h2>
+                <small> April 14, 2016</small>
+                <div>
+                    <img src="/res/sed.jpg" style="border:2px;width:500px;">
+                </div>
+            </div>
+
+            <div class="well col-lg-4 col-lg-offset-4">
+                <h2><a href="http://bbqworld.org/seven-myths-about-grilling-a-steak/">7 myths about grilling a steak</a></h2>
+                <small> April 14, 2016</small>
+                <div>
+                    <img src="/res/steak.jpg" style="border:2px;width:500px;">
+                </div>
+            </div>
+            
+        </div>
     </body>
 </html>
