--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <div>
             <div class="well col-lg-4 col-lg-offset-4">
                 <h2>Happy memoriale day :(</h2>
-                <small> April 14, 2016</small>
+                <h5>by Eilan Wang</h5>
+                <small>April 14, 2017</small>
                 <div>
                     <img src="/res/warcry.jpg" style="border:2px;width:500px;">
                 </div>
@@ -62,15 +63,26 @@
 
             <div class="well col-lg-4 col-lg-offset-4">
                 <h2>S H R E D D</h2>
-                <small> April 14, 2016</small>
+                <h5>by Eilan Wang</h5>
+                <small>April 14, 2016</small>
                 <div>
                     <img src="/res/sendoc.png" style="border:2px;width:500px;">
                 </div>
             </div>
 
             <div class="well col-lg-4 col-lg-offset-4">
+                <h2>Thot for the chindren :(</h2>
+                <h5>by Eilan Wang</h5>
+                <small>April 14, 2016</small>
+                <div>
+                    <img src="/res/thot.jpg" style="border:2px;width:500px;">
+                </div>
+            </div>
+
+            <div class="well col-lg-4 col-lg-offset-4">
                 <h2>Omo</h2>
-                <small> April 14, 2016</small>
+                <h5>by Eilan Wang</h5>
+                <small>April 14, 2015</small>
                 <div>
                     <img src="/res/sed.jpg" style="border:2px;width:500px;">
                 </div>
@@ -78,12 +90,48 @@
 
             <div class="well col-lg-4 col-lg-offset-4">
                 <h2><a href="http://bbqworld.org/seven-myths-about-grilling-a-steak/">7 myths about grilling a steak</a></h2>
-                <small> April 14, 2016</small>
+                <h5>by Eilan Wang</h5>
+                <small>April 14, 2014</small>
                 <div>
                     <img src="/res/steak.jpg" style="border:2px;width:500px;">
                 </div>
             </div>
             
+            <div class="well col-lg-4 col-lg-offset-4">
+                <h2>Press F to pay respecc :(</h2>
+                <h5>by Eilan Wang</h5>
+                <small>April 14, 2014</small>
+                <div>
+                    <img src="/res/fren.jpg" style="border:2px;width:500px;">
+                </div>
+            </div>
+
+            <div class="well col-lg-4 col-lg-offset-4">
+                <h2>C U T T </h2>
+                <h5>by Eilan Wang</h5>
+                <small>April 14, 2014</small>
+                <div>
+                    <img src="/res/knif.jpg" style="border:2px;width:500px;">
+                </div>
+            </div>
+
+            <div class="well col-lg-4 col-lg-offset-4">
+                <h2><a href="http://cedarriversmokehouse.com/">Ceder River Smoakehouse</a></h2>
+                <h5>by Eilan Wang</h5>
+                <small>April 14, 2013</small>
+                <div>
+                    <img src="/res/bbq.jpg" style="border:2px;width:500px;">
+                </div>
+            </div>
+
+            <div class="well col-lg-4 col-lg-offset-4">
+                <h2>Slice of life foond</h2>
+                <h5>by Eilan Wang</h5>
+                <small>April 14, 2013</small>
+                <div>
+                    <img src="/res/slice.jpg" style="border:2px;width:500px;">
+                </div>
+            </div>
         </div>
     </body>
 </html>
